--- a/calendrier.html
+++ b/calendrier.html
@@ -16,8 +16,7 @@
     </audio>
 
     <header>
-        <div class="title">
-            <h1>Choisissez votre sorcier</h1>
+        <di        <h1>Choisissez votre sorcier</h1>
         </div>
         
 
@@ -25,8 +24,7 @@
     
     <body>
         <div id="menu">
-            <div class="images">
-                <img src="/asset/images/3.png" alt="perso1">
+            <div             <img src="/asset/images/3.png" alt="perso1">
                 <img src="/asset/images/3.png" alt="perso2">
                 <img src="/asset/images/3.png" alt="perso3">
                 <img src="/asset/images/3.png" alt="perso4">
@@ -45,31 +43,31 @@
                 <img src="/asset/images/3.png" alt="perso17">
 
             </div>
-<div class="dispersion">
-                <img src="/asset/images/images.png" alt="" class="candle one" style="top:150px;left:30px;width:50px;">
-                <img src="/asset/images/images.png" alt="" class="candle two" style="top:60px;left:60px;width:70px;">
-                <img src="/asset/images/images.png" alt="" class="candle tree" style="top:10px;left:300px;width:50px;">
-                <img src="/asset/images/images.png" alt="" class="candle four" style="top:160px;left:500px;width:50px;">
-                <img src="/asset/images/images.png" alt="" class="candle five" style="top:100px;right:20px;width:40px;">
-                <img src="/asset/images/images.png" alt="" class="candle six" style="top:10px;right:40px;width:50px;">
-                <img src="/asset/images/images.png" alt="" class="candle one" style="top:150px;left:30px;width:90px;">
-                <img src="/asset/images/images.png" alt="" class="candle two" style="top:60px;left:60px;width:30px;">
-                <img src="/asset/images/images.png" alt="" class="candle tree" style="top:130px;left:300px;width:50px;">
-                <img src="/asset/images/images.png" alt="" class="candle four" style="top:60px;left:380px;width:70px;">
-                <img src="/asset/images/images.png" alt="" class="candle five" style="top:15px;right:490px;width:90px;">
-                <img src="/asset/images/images.png" alt="" class="candle six" style="top:150px;right:100px;width:40px;">
-                <img src="/asset/images/images.png" alt="" class="candle one" style="top:150px;left:30px;width:50px;">
-                <img src="/asset/images/images.png" alt="" class="candle two" style="top:160px;left:130px;width:50px;">
-                <img src="/asset/images/images.png" alt="" class="candle tree" style="top:180px;left:270px;width:60px;">
-                <img src="/asset/images/images.png" alt="" class="candle four" style="top:50px;left:90px;width:50px;">
-                <img src="/asset/images/images.png" alt="" class="candle five" style="top:200px;right:50px;width:50px;">
-                <img src="/asset/images/images.png" alt="" class="candle six" style="top:130px;right:170px;width:50px;">
-                <img src="/asset/images/images.png" alt="" class="candle one" style="top:20px;left:8700px;width:50px;">
-                <img src="/asset/images/images.png" alt="" class="candle two" style="top:60px;left:630px;width:30px;">
-                <img src="/asset/images/images.png" alt="" class="candle tree" style="top:10px;left:750px;width:50px;">
-                <img src="/asset/images/images.png" alt="" class="candle four" style="top:60px;left:500px;width:60px;">
-                <img src="/asset/images/images.png" alt="" class="candle five" style="top:30px;right:350px;width:50px;">
-                <img src="/asset/images/images.png" alt="" class="candle six" style="top:10px;right:270px;width:90px;">
+<div 
+                <img src="/asset/images/images.png" alt="" style="top:150px;left:30px;width:50px;">
+                <img src="/asset/images/images.png" alt="" style="top:60px;left:60px;width:70px;">
+                <img src="/asset/images/images.png" alt=""  style="top:10px;left:300px;width:50px;">
+                <img src="/asset/images/images.png" alt=""  style="top:160px;left:500px;width:50px;">
+                <img src="/asset/images/images.png" alt=""  style="top:100px;right:20px;width:40px;">
+                <img src="/asset/images/images.png" alt="" style="top:10px;right:40px;width:50px;">
+                <img src="/asset/images/images.png" alt="" style="top:150px;left:30px;width:90px;">
+                <img src="/asset/images/images.png" alt="" style="top:60px;left:60px;width:30px;">
+                <img src="/asset/images/images.png" alt=""  style="top:130px;left:300px;width:50px;">
+                <img src="/asset/images/images.png" alt=""  style="top:60px;left:380px;width:70px;">
+                <img src="/asset/images/images.png" alt=""  style="top:15px;right:490px;width:90px;">
+                <img src="/asset/images/images.png" alt="" style="top:150px;right:100px;width:40px;">
+                <img src="/asset/images/images.png" alt="" style="top:150px;left:30px;width:50px;">
+                <img src="/asset/images/images.png" alt="" style="top:160px;left:130px;width:50px;">
+                <img src="/asset/images/images.png" alt=""  style="top:180px;left:270px;width:60px;">
+                <img src="/asset/images/images.png" alt=""  style="top:50px;left:90px;width:50px;">
+                <img src="/asset/images/images.png" alt=""  style="top:200px;right:50px;width:50px;">
+                <img src="/asset/images/images.png" alt="" style="top:130px;right:170px;width:50px;">
+                <img src="/asset/images/images.png" alt="" style="top:20px;left:8700px;width:50px;">
+                <img src="/asset/images/images.png" alt="" style="top:60px;left:630px;width:30px;">
+                <img src="/asset/images/images.png" alt=""  style="top:10px;left:750px;width:50px;">
+                <img src="/asset/images/images.png" alt=""  style="top:60px;left:500px;width:60px;">
+                <img src="/asset/images/images.png" alt=""  style="top:30px;right:350px;width:50px;">
+                <img src="/asset/images/images.png" alt="" style="top:10px;right:270px;width:90px;">
 </div>
         </div>
     </body>
