--- a/calendrier.html
+++ b/calendrier.html
@@ -43,7 +43,7 @@
                 <img src="/asset/images/3.png" alt="perso17">
 
             </div>
-<div ="disper">
+<div classe="dispersion">
                 <img src="/asset/images/images.png" alt="" class="candle" style="top:150px;left:30px;width:50px;">
                 <img src="/asset/images/images.png" alt="" class="candle" style="top:60px;left:60px;width:70px;">
                 <img src="/asset/images/images.png" alt="" class="candle" style="top:10px;left:300px;width:50px;">
@@ -64,9 +64,9 @@
                 <img src="/asset/images/images.png" alt="" class="candle" style="top:130px;right:170px;width:50px;">
                 <img src="/asset/images/images.png" alt="" class="candle" style="top:20px;left:8700px;width:50px;">
                 <img src="/asset/images/images.png" alt="" class="candle" style="top:60px;left:630px;width:30px;">
-                <img src="/asset/images/images.png" alt="" class="candle"" style="top:10px;left:750px;width:50px;">
-                <img src="/asset/images/images.png" alt="" class="candle"" style="top:60px;left:500px;width:60px;">
-                <img src="/asset/images/images.png" alt="" class="candle"" style="top:30px;right:350px;width:50px;">
+                <img src="/asset/images/images.png" alt="" class="candle" style="top:10px;left:750px;width:50px;">
+                <img src="/asset/images/images.png" alt="" class="candle" style="top:60px;left:500px;width:60px;">
+                <img src="/asset/images/images.png" alt="" class="candle" style="top:30px;right:350px;width:50px;">
                 <img src="/asset/images/images.png" alt="" class="candle" style="top:10px;right:270px;width:90px;">
 </div>
         </div>
