--- a/calendrier.html
+++ b/calendrier.html
@@ -43,7 +43,7 @@
                 <img src="/asset/images/3.png" alt="perso17">
 
             </div>
-<div classe="dispersion">
+<div class="dispersion">
                 <img src="/asset/images/images.png" alt="" class="candle" style="top:150px;left:30px;width:50px;">
                 <img src="/asset/images/images.png" alt="" class="candle" style="top:60px;left:60px;width:70px;">
                 <img src="/asset/images/images.png" alt="" class="candle" style="top:10px;left:300px;width:50px;">
