--- a/calendrier.html
+++ b/calendrier.html
@@ -24,7 +24,8 @@
     
     <body>
         <div id="menu">
-            <div ="image"              <img src="/asset/images/3.png" alt="perso1">
+            <div class="image">              
+                <img src="/asset/images/3.png" alt="perso1">
                 <img src="/asset/images/3.png" alt="perso2">
                 <img src="/asset/images/3.png" alt="perso3">
                 <img src="/asset/images/3.png" alt="perso4">
