--- a/calendrier.html
+++ b/calendrier.html
@@ -16,7 +16,8 @@
     </audio>
 
     <header>
-        <div ="titl"         <h1>Choisissez votre sorcier</h1>
+        <div class="title">
+                     <h1>Choisissez votre sorcier</h1>
         </div>
         
 
